# wheke-sentry

./: README.md  pyproject.toml
src/wheke_sentry/: __init__.py  _pod.py  _service.py  _settings.py
tests/: conftest.py  test_app.py
tests/example_app/: __init__.py
